# fact_check_crawler

./: .env.sample  Dockerfile  app.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  run.sh  scrapy.cfg
fact_check_crawler/: items.py  mongo_provider.py  pipelines.py  settings.py
fact_check_crawler/spiders/: boatosorg.py
ofelia/: config.ini
tests/: test_fact_check_crawler.py
