[tool.poetry]
name = "fact-check-crawler"
version = "0.1.0"
description = ""
authors = ["Rodrigo Torres <ratorres7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
pymongo = "^3.11.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
